--- a/public/admin.html
+++ b/public/admin.html
@@ -249,18 +249,13 @@
         .input-with-label {
             position: relative;
             width: 100%;
-            display: flex;
-            align-items: center;
-        }
-
-        .password-input-wrapper input,
-        .input-with-label input {
-            width: 100%;
         }
 
         .password-toggle {
             position: absolute;
             right: 15px;
+            top: 50%;
+            transform: translateY(-50%);
             background: none;
             border: none;
             color: var(--primary-blue);
@@ -270,7 +265,10 @@
             font-weight: 400;
             transition: color 0.3s ease;
             padding: 0;
+            margin: 0;
             line-height: 1;
+            display: flex;
+            align-items: center;
         }
 
         .password-toggle:hover {
@@ -280,12 +278,17 @@
         .input-suffix-label {
             position: absolute;
             right: 15px;
+            top: 50%;
+            transform: translateY(-50%);
             color: rgba(255, 255, 255, 0.5);
             font-family: var(--font-family);
             font-size: 14px;
             font-weight: 400;
             pointer-events: none;
+            margin: 0;
             line-height: 1;
+            display: flex;
+            align-items: center;
         }
 
         .toggle-switch {
