--- a/public/admin.html
+++ b/public/admin.html
@@ -103,11 +103,54 @@
             margin-bottom: 30px;
         }
 
+        .logo-section {
+            padding: 40px 0 40px 0;
+            border-bottom: 2px solid rgba(0, 188, 231, 0.2);
+            margin-bottom: 40px;
+        }
+
+        .logo-section h2 {
+            font-size: 24px;
+            font-weight: 800;
+            color: var(--primary-blue);
+            margin-bottom: 20px;
+            text-transform: uppercase;
+        }
+
+        .logo-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 30px;
+            align-items: center;
+        }
+
+        .logo-preview {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 150px;
+            background: rgba(0, 0, 0, 0.3);
+            border: 2px dashed rgba(0, 188, 231, 0.3);
+            border-radius: 12px;
+            padding: 20px;
+        }
+
+        .logo-preview img {
+            max-width: 100%;
+            max-height: 150px;
+            object-fit: contain;
+        }
+
+        .logo-preview-placeholder {
+            color: rgba(255, 255, 255, 0.3);
+            font-size: 16px;
+            text-align: center;
+        }
+
         .settings-grid {
             display: grid;
             grid-template-columns: 45% 10% 45%;
             gap: 0;
-            padding-top: 60px;
         }
 
         .control-panel {
@@ -898,6 +941,24 @@
 
         <!-- Settings Tab -->
         <div class="tab-content" id="config">
+            <!-- Logo Section -->
+            <div class="logo-section">
+                <h2>Logo</h2>
+                <div class="logo-container">
+                    <div class="form-group" style="margin-bottom: 0;">
+                        <input type="file" id="logoUpload" accept=".png" style="display: none;" onchange="handleLogoUpload(event)">
+                        <div class="file-input-wrapper" onclick="document.getElementById('logoUpload').click()">
+                            <span id="logoFileName">No file chosen</span>
+                            <button type="button" class="file-browse-btn">Browse</button>
+                        </div>
+                    </div>
+                    <div class="logo-preview" id="logoPreview">
+                        <div class="logo-preview-placeholder" id="logoPlaceholder">No logo uploaded</div>
+                        <img id="logoPreviewImage" style="display: none;" alt="Logo Preview">
+                    </div>
+                </div>
+            </div>
+
             <div class="settings-grid">
                 <!-- Left Column -->
                 <div class="settings-column">
@@ -991,15 +1052,6 @@
                     <div class="form-group" id="option2Group" style="display: none;">
                         <label class="field-label">Option 2</label>
                         <input type="text" id="option2Label" value="No" placeholder="No" oninput="autoSaveSettings()">
-                    </div>
-
-                    <div class="form-group">
-                        <label class="field-label">Logo</label>
-                        <input type="file" id="logoUpload" accept=".png" style="display: none;" onchange="handleLogoUpload(event)">
-                        <div class="file-input-wrapper" onclick="document.getElementById('logoUpload').click()">
-                            <span id="logoFileName">No file chosen</span>
-                            <button type="button" class="file-browse-btn">Browse</button>
-                        </div>
                     </div>
 
                     <div class="form-group">
@@ -1231,6 +1283,7 @@
 
                 if (config.customLogo) {
                     document.getElementById('logoFileName').textContent = 'Custom logo uploaded';
+                    updateLogoPreview(config.customLogo);
                 }
 
                 // Update voting mode visibility
@@ -1516,6 +1569,9 @@
             reader.onload = async function(e) {
                 const logoDataUrl = e.target.result;
 
+                // Update preview
+                updateLogoPreview(logoDataUrl);
+
                 try {
                     await updateGameConfig({ customLogo: logoDataUrl });
                     alert('Logo uploaded successfully!');
@@ -1525,6 +1581,22 @@
                 }
             };
             reader.readAsDataURL(file);
+        }
+
+        // Update logo preview
+        function updateLogoPreview(logoDataUrl) {
+            const placeholder = document.getElementById('logoPlaceholder');
+            const previewImage = document.getElementById('logoPreviewImage');
+
+            if (logoDataUrl) {
+                placeholder.style.display = 'none';
+                previewImage.src = logoDataUrl;
+                previewImage.style.display = 'block';
+            } else {
+                placeholder.style.display = 'block';
+                previewImage.style.display = 'none';
+                previewImage.src = '';
+            }
         }
 
         // Date formatting helper for voting table
