Fix vertical alignment of input field labels by setting fixed height
Set height to 14px to match font size for proper centering
Removed flex properties that were causing alignment issues
Labels now properly centered relative to their own dimensions

--- a/public/admin.html
+++ b/public/admin.html
@@ -310,8 +310,7 @@
             padding: 0;
             margin: 0;
             line-height: 1;
-            display: flex;
-            align-items: center;
+            height: 14px;
         }
 
         .password-toggle:hover {
@@ -330,8 +329,7 @@
             pointer-events: none;
             margin: 0;
             line-height: 1;
-            display: flex;
-            align-items: center;
+            height: 14px;
         }
 
         .toggle-switch {
