--- a/public/admin.html
+++ b/public/admin.html
@@ -103,46 +103,33 @@
             margin-bottom: 30px;
         }
 
-        .logo-section {
-            padding: 40px 0 40px 0;
-            border-bottom: 2px solid rgba(0, 188, 231, 0.2);
-            margin-bottom: 40px;
-        }
-
-        .logo-section h2 {
-            font-size: 24px;
-            font-weight: 800;
-            color: var(--primary-blue);
-            margin-bottom: 20px;
-            text-transform: uppercase;
-        }
-
-        .logo-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 30px;
-            align-items: center;
-        }
-
-        .logo-preview {
+        .logo-preview-clickable {
             display: flex;
             align-items: center;
             justify-content: center;
             min-height: 150px;
-            background: rgba(0, 0, 0, 0.3);
-            border: 2px dashed rgba(0, 188, 231, 0.3);
+            margin-top: 10px;
+            background: rgba(0, 0, 0, 0.5);
+            border: 2px dashed var(--primary-blue);
             border-radius: 12px;
             padding: 20px;
+            cursor: pointer;
+            transition: all 0.3s ease;
         }
 
-        .logo-preview img {
+        .logo-preview-clickable:hover {
+            border-color: var(--primary-pink);
+            background: rgba(0, 0, 0, 0.7);
+        }
+
+        .logo-preview-clickable img {
             max-width: 100%;
             max-height: 150px;
             object-fit: contain;
         }
 
         .logo-preview-placeholder {
-            color: rgba(255, 255, 255, 0.3);
+            color: rgba(255, 255, 255, 0.5);
             font-size: 16px;
             text-align: center;
         }
@@ -957,27 +944,19 @@
 
         <!-- Settings Tab -->
         <div class="tab-content" id="config">
-            <!-- Logo Section -->
-            <div class="logo-section">
-                <h2>Logo</h2>
-                <div class="logo-container">
-                    <div class="form-group" style="margin-bottom: 0;">
-                        <input type="file" id="logoUpload" accept=".png" style="display: none;" onchange="handleLogoUpload(event)">
-                        <div class="file-input-wrapper" onclick="document.getElementById('logoUpload').click()">
-                            <span id="logoFileName">No file chosen</span>
-                            <button type="button" class="file-browse-btn">Browse</button>
-                        </div>
-                    </div>
-                    <div class="logo-preview" id="logoPreview">
-                        <div class="logo-preview-placeholder" id="logoPlaceholder">No logo uploaded</div>
-                        <img id="logoPreviewImage" style="display: none;" alt="Logo Preview">
-                    </div>
-                </div>
-            </div>
-
             <div class="settings-grid">
                 <!-- Left Column -->
                 <div class="settings-column">
+                    <!-- Logo -->
+                    <div class="form-group">
+                        <label class="field-label">Logo</label>
+                        <input type="file" id="logoUpload" accept=".png" style="display: none;" onchange="handleLogoUpload(event)">
+                        <div class="logo-preview-clickable" id="logoPreview" onclick="document.getElementById('logoUpload').click()">
+                            <div class="logo-preview-placeholder" id="logoPlaceholder">Click to upload logo</div>
+                            <img id="logoPreviewImage" style="display: none;" alt="Logo Preview">
+                        </div>
+                    </div>
+
                     <div class="form-group">
                         <label>Voting Mode</label>
                         <div class="combobox-container">
@@ -991,23 +970,6 @@
                                 <div class="combobox-option selected" onclick="selectOption(this, 'player')">Player</div>
                                 <div class="combobox-option" onclick="selectOption(this, 'quantity-player')">Quantity & Player</div>
                                 <div class="combobox-option" onclick="selectOption(this, 'option-player')">Option & Player</div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Submission Style</label>
-                        <div class="combobox-container">
-                            <div class="combobox" onclick="toggleCombobox(this)">
-                                <span id="selectedSubmissionStyle">Instant Submit</span>
-                                <svg class="combobox-arrow" width="12" height="8" viewBox="0 0 12 8" fill="white">
-                                    <path d="M1 1l5 5 5-5"/>
-                                </svg>
-                            </div>
-                            <div class="combobox-options">
-                                <div class="combobox-option selected" onclick="selectOption(this, 'instant')">Instant Submit</div>
-                                <div class="combobox-option" onclick="selectOption(this, 'batch')">Batch Submit</div>
-                                <div class="combobox-option" onclick="selectOption(this, 'timed-batch')">Timed Batch</div>
                             </div>
                         </div>
                     </div>
@@ -1068,6 +1030,23 @@
                     <div class="form-group" id="option2Group" style="display: none;">
                         <label class="field-label">Option 2</label>
                         <input type="text" id="option2Label" value="No" placeholder="No" oninput="autoSaveSettings()">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Submission Style</label>
+                        <div class="combobox-container">
+                            <div class="combobox" onclick="toggleCombobox(this)">
+                                <span id="selectedSubmissionStyle">Instant Submit</span>
+                                <svg class="combobox-arrow" width="12" height="8" viewBox="0 0 12 8" fill="white">
+                                    <path d="M1 1l5 5 5-5"/>
+                                </svg>
+                            </div>
+                            <div class="combobox-options">
+                                <div class="combobox-option selected" onclick="selectOption(this, 'instant')">Instant Submit</div>
+                                <div class="combobox-option" onclick="selectOption(this, 'batch')">Batch Submit</div>
+                                <div class="combobox-option" onclick="selectOption(this, 'timed-batch')">Timed Batch</div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -1298,7 +1277,6 @@
                 }
 
                 if (config.customLogo) {
-                    document.getElementById('logoFileName').textContent = 'Custom logo uploaded';
                     updateLogoPreview(config.customLogo);
                 }
 
@@ -1576,9 +1554,6 @@
                 event.target.value = '';
                 return;
             }
-
-            // Update file name display
-            document.getElementById('logoFileName').textContent = file.name;
 
             // Convert to base64 and save
             const reader = new FileReader();
