Add padding-top to inline labels and spacing for mobile layout
- Add 5px padding-top to .input-suffix-label and .password-toggle for better vertical alignment
- Add 40px margin-bottom to last field of first column on mobile devices
- Ensures proper spacing when columns stack vertically on mobile

--- a/public/admin.html
+++ b/public/admin.html
@@ -295,6 +295,7 @@
             font-weight: 400;
             transition: color 0.3s ease;
             padding: 0;
+            padding-top: 5px;
             margin: 0;
             line-height: 1;
             height: 14px;
@@ -315,6 +316,7 @@
             font-weight: 400;
             pointer-events: none;
             margin: 0;
+            padding-top: 5px;
             line-height: 1;
             height: 14px;
         }
@@ -650,6 +652,10 @@
 
             .settings-grid {
                 grid-template-columns: 1fr;
+            }
+
+            .settings-column:first-child .form-group:last-child {
+                margin-bottom: 40px;
             }
 
             .form-group input,
