Add 60px top padding to settings grid

--- a/public/admin.html
+++ b/public/admin.html
@@ -138,6 +138,7 @@
             display: grid;
             grid-template-columns: 45% 10% 45%;
             gap: 0;
+            padding-top: 60px;
         }
 
         .control-panel {
