Rename 'Voting Mode' to 'Voting For'

--- a/public/admin.html
+++ b/public/admin.html
@@ -965,7 +965,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Voting Mode</label>
+                        <label>Voting For</label>
                         <div class="combobox-container">
                             <div class="combobox" onclick="toggleCombobox(this)">
                                 <span id="selectedVotingMode">Player</span>
