Add 20px bottom margin to control card content

--- a/public/admin.html
+++ b/public/admin.html
@@ -476,6 +476,7 @@
 
         .control-card-content {
             flex: 1;
+            margin-bottom: 20px;
         }
 
         .control-card-buttons {
