--- a/public/display.html
+++ b/public/display.html
@@ -357,7 +357,7 @@
 
         /* Locked state for player cards */
         .player-card.locked {
-            opacity: 0.3;
+            opacity: 0.5;
             pointer-events: none;
             cursor: not-allowed;
         }
@@ -586,12 +586,23 @@
             try {
                 const config = await getGameConfig();
 
-                // Check if timer should be shown
-                if (config.timerVisibility === 'show' && config.timerDuration > 0) {
+                // Check if timer should be shown and voting is unlocked
+                if (config.timerVisibility === 'show' && config.timerDuration > 0 && !config.votingLocked) {
                     document.getElementById('timerContainer').style.display = 'block';
-                    timeRemaining = config.timerDuration;
+
+                    // Calculate time remaining based on start time
+                    if (config.timerStartTime) {
+                        const elapsed = Math.floor((Date.now() - config.timerStartTime) / 1000);
+                        timeRemaining = Math.max(0, config.timerDuration - elapsed);
+                    } else {
+                        timeRemaining = config.timerDuration;
+                    }
+
                     isTimerActive = true;
                     startTimer();
+                } else {
+                    document.getElementById('timerContainer').style.display = 'none';
+                    if (timerInterval) clearInterval(timerInterval);
                 }
             } catch (error) {
                 console.error('Error initializing timer:', error);
@@ -621,17 +632,63 @@
         }
 
         function lockDisplay() {
+            // Show locked overlay
+            document.getElementById('displayLocked').classList.add('active');
+
             // Lock all player cards
             document.querySelectorAll('.player-card').forEach(card => {
                 card.classList.add('locked');
             });
         }
 
+        function unlockDisplay() {
+            // Hide locked overlay
+            document.getElementById('displayLocked').classList.remove('active');
+
+            // Unlock all player cards
+            document.querySelectorAll('.player-card').forEach(card => {
+                card.classList.remove('locked');
+            });
+        }
+
+        // Listen for voting lock state changes
+        async function watchVotingLockState() {
+            try {
+                // Initial check
+                const config = await getGameConfig();
+                const votingLocked = config.votingLocked !== undefined ? config.votingLocked : true;
+
+                if (votingLocked) {
+                    lockDisplay();
+                } else {
+                    unlockDisplay();
+                    initTimer();
+                }
+
+                // Poll for changes every 2 seconds
+                setInterval(async () => {
+                    const updatedConfig = await getGameConfig();
+                    const isLocked = updatedConfig.votingLocked !== undefined ? updatedConfig.votingLocked : true;
+
+                    if (isLocked) {
+                        lockDisplay();
+                        if (timerInterval) clearInterval(timerInterval);
+                        document.getElementById('timerContainer').style.display = 'none';
+                    } else {
+                        unlockDisplay();
+                        initTimer();
+                    }
+                }, 2000);
+            } catch (error) {
+                console.error('Error watching voting lock state:', error);
+            }
+        }
+
         // Check if already authenticated
         if (sessionStorage.getItem('authenticated') === 'true' && sessionStorage.getItem('role') === 'display') {
             showDisplayScreen();
-            // Initialize timer after display screen is shown
-            initTimer();
+            // Initialize voting lock state watcher
+            watchVotingLockState();
         }
     </script>
 </body>
