Remove top padding from active display screen

--- a/public/display.html
+++ b/public/display.html
@@ -154,6 +154,7 @@
         .display-screen.active {
             display: flex;
             flex-direction: column;
+            padding-top: 0;
         }
 
         /* Players Grid */
