Auto-lock voting when countdown reaches zero
- Admin panel automatically locks voting when timer expires
- Voting and display pages also update Firebase on timer expiration
- Admin UI automatically updates to show locked state
- Button changes from "LOCK" to "START"
- Status changes from "Voting On" to "Voting Locked"
- Indicator changes from green to red
- All pages sync via Firebase polling

--- a/public/admin.html
+++ b/public/admin.html
@@ -1545,13 +1545,24 @@
 
                     if (adminTimerInterval) clearInterval(adminTimerInterval);
 
-                    adminTimerInterval = setInterval(() => {
+                    adminTimerInterval = setInterval(async () => {
                         if (adminTimeRemaining > 0) {
                             adminTimeRemaining--;
                             updateAdminTimerDisplay();
                         } else {
+                            // Timer reached 0 - automatically lock voting
                             clearInterval(adminTimerInterval);
                             document.getElementById('adminTimerDisplay').style.display = 'none';
+
+                            try {
+                                // Lock voting in Firebase
+                                await updateGameConfig({ votingLocked: true });
+                                // Update UI
+                                updateVotingLockUI(true);
+                                console.log('Voting automatically locked - timer expired');
+                            } catch (error) {
+                                console.error('Error auto-locking voting:', error);
+                            }
                         }
                     }, 1000);
                 } else {
