--- a/public/voting.html
+++ b/public/voting.html
@@ -156,7 +156,7 @@
         function startTimer() {
             updateTimerDisplay();
 
-            timerInterval = setInterval(() => {
+            timerInterval = setInterval(async () => {
                 if (timeRemaining > 0) {
                     timeRemaining--;
                     updateTimerDisplay();
@@ -164,6 +164,13 @@
                     // Timer reached 0:00
                     clearInterval(timerInterval);
                     lockVoting();
+
+                    // Ensure voting is locked in Firebase (admin will also do this)
+                    try {
+                        await updateGameConfig({ votingLocked: true });
+                    } catch (error) {
+                        console.error('Error updating voting lock:', error);
+                    }
                 }
             }, 1000);
         }
